Deprecation refactoring.